--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         }
       }(window.location))
     </script>
-    <link rel="icon" type="image/png" href="/thac-logo.svg" />
+    <link rel="icon" type="image/png" href="/neurosift-chat-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thac</title>
+    <title>Neurosift</title>
   </head>
   <body>
     <div id="root"></div>
